Fix Railway build: set context to root and update Dockerfile paths

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,12 +9,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for better caching
-COPY requirements.txt .
+# Copy requirements first (from root context)
+COPY backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application
-COPY . .
+# Copy the backend code (from root context)
+COPY backend/ .
 
 # Expose the port (Railway provides $PORT)
 ENV PORT=8000
