chore: full MVP readiness sync - environment stabilized on Node 20, branding assets updated, and landing page API centralized

--- a/desktop.ini
+++ b/desktop.ini
@@ -9,3 +9,5 @@ Capture d'écran 2026-02-08 234554.png=@Capture d'écran 2026-02-08 234554,0
 Capture d'écran 2026-02-10 131458.png=@Capture d'écran 2026-02-10 131458,0
 Capture d'écran 2026-02-10 224059.png=@Capture d'écran 2026-02-10 224059,0
 Capture d'écran 2026-02-14 180458.png=@Capture d'écran 2026-02-14 180458,0
+Capture d'écran 2026-02-16 040739.png=@Capture d'écran 2026-02-16 040739,0
+Capture d'écran 2026-02-16 040758.png=@Capture d'écran 2026-02-16 040758,0
