--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,47 +9,50 @@
     "ios": "expo start --ios"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@expo/vector-icons": "~14.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^7.0.0",
     "constants": "^0.0.2",
     "date-fns": "^4.1.0",
-    "expo": "54.0.33",
-    "expo-camera": "~17.0.10",
-    "expo-constants": "~18.0.13",
-    "expo-device": "~8.0.10",
-    "expo-document-picker": "~14.0.8",
-    "expo-file-system": "~19.0.21",
-    "expo-image-picker": "~17.0.10",
-    "expo-linear-gradient": "~15.0.8",
-    "expo-linking": "~8.0.11",
-    "expo-local-authentication": "~16.0.2",
-    "expo-localization": "^17.0.8",
-    "expo-navigation-bar": "~5.0.10",
-    "expo-notifications": "~0.32.16",
-    "expo-print": "~15.0.8",
-    "expo-router": "~6.0.23",
-    "expo-secure-store": "~15.0.8",
-    "expo-sharing": "~14.0.8",
-    "expo-status-bar": "~3.0.9",
-    "expo-web-browser": "~15.0.10",
+    "expo": "~52.0.28",
+    "expo-av": "~15.0.2",
+    "expo-camera": "~16.0.12",
+    "expo-constants": "~17.0.3",
+    "expo-device": "~7.0.2",
+    "expo-document-picker": "~13.0.1",
+    "expo-file-system": "~18.0.7",
+    "expo-image-picker": "~16.0.4",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.4",
+    "expo-local-authentication": "~15.0.1",
+    "expo-localization": "~16.0.0",
+    "expo-navigation-bar": "~4.0.7",
+    "expo-notifications": "~0.29.11",
+    "expo-print": "~14.0.3",
+    "expo-router": "~4.0.16",
+    "expo-secure-store": "~14.0.1",
+    "expo-sharing": "~13.0.1",
+    "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "~14.0.2",
     "i18next": "^25.8.7",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-i18next": "^16.5.4",
-    "react-native": "0.81.5",
+    "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-qrcode-svg": "^6.3.21",
-    "react-native-safe-area-context": "5.6.2",
-    "react-native-screens": "4.16.0",
-    "react-native-svg": "15.12.1",
-    "react-native-web": "^0.21.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
-    "@types/react": "~19.1.10",
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/prebuild-config": "~8.0.0",
+    "@types/react": "~18.3.1",
     "typescript": "~5.9.2"
   },
   "private": true
