chore: standardize branding to stockman.pro and contact@stockman.pro

--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -12,7 +12,9 @@
             "node": "20.18.1",
             "distribution": "internal",
             "env": {
-                "EXPO_PUBLIC_API_URL": "https://stockman-production-149d.up.railway.app"
+                "EXPO_PUBLIC_API_URL": "https://stockman-production-149d.up.railway.app",
+                "EXPO_PUBLIC_REVENUECAT_ANDROID_KEY": "",
+                "EXPO_PUBLIC_REVENUECAT_IOS_KEY": ""
             },
             "android": {
                 "buildType": "apk",
