Fix POS receipt client name, dashboard white pages, and KPI icons. Update API types and start investigating notification issues.

--- a/desktop.ini
+++ b/desktop.ini
@@ -11,3 +11,9 @@ Capture d'écran 2026-02-10 224059.png=@Capture d'écran 2026-02-10 224059,0
 Capture d'écran 2026-02-14 180458.png=@Capture d'écran 2026-02-14 180458,0
 Capture d'écran 2026-02-16 040739.png=@Capture d'écran 2026-02-16 040739,0
 Capture d'écran 2026-02-16 040758.png=@Capture d'écran 2026-02-16 040758,0
+Capture d'écran 2026-02-17 151109.png=@Capture d'écran 2026-02-17 151109,0
+Capture d'écran 2026-02-17 185404.png=@Capture d'écran 2026-02-17 185404,0
+Capture d'écran 2026-02-17 185238.png=@Capture d'écran 2026-02-17 185238,0
+Capture d'écran 2026-02-17 185204.png=@Capture d'écran 2026-02-17 185204,0
+Capture d'écran 2026-02-17 185153.png=@Capture d'écran 2026-02-17 185153,0
+Capture d'écran 2026-02-17 185120.png=@Capture d'écran 2026-02-17 185120,0
