--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
     "react-native-markdown-display": "^7.0.2",
+    "react-native-purchases": "^8.12.0",
     "react-native-qrcode-svg": "^6.3.21",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
