--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -27,14 +27,16 @@
             },
             "ios": {
                 "simulator": false
-            }
+            },
+            "channel": "preview"
         },
         "production": {
             "env": {
                 "EXPO_PUBLIC_API_URL": "https://stockman-production-149d.up.railway.app",
                 "EXPO_PUBLIC_REVENUECAT_ANDROID_KEY": "test_EDNVSdHuDoNChvGFNstSFQGQlFt",
                 "EXPO_PUBLIC_REVENUECAT_IOS_KEY": "test_EDNVSdHuDoNChvGFNstSFQGQlFt"
-            }
+            },
+            "channel": "production"
         }
     },
     "submit": {
