--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "expo-secure-store": "~14.0.1",
     "expo-sharing": "~13.0.1",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.5",
     "expo-web-browser": "~14.0.2",
     "i18next": "^25.8.7",
     "react": "18.3.1",
