Fix: resolve white screen crash by adding defensive checks in PremiumGate and missing translations

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,9 +52,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
-    "@expo/config-plugins": "~9.0.0",
     "@expo/prebuild-config": "~8.0.0",
     "@types/react": "~18.3.1",
+    "metro": "^0.83.3",
+    "metro-config": "^0.83.3",
+    "metro-core": "^0.83.3",
+    "metro-minify-terser": "^0.83.3",
+    "metro-resolver": "^0.83.3",
+    "metro-runtime": "^0.83.3",
+    "metro-source-map": "^0.83.3",
+    "metro-symbolicate": "^0.83.3",
     "typescript": "~5.9.2"
   },
   "private": true
