--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,14 +54,14 @@
     "@babel/core": "^7.25.0",
     "@expo/prebuild-config": "~8.0.0",
     "@types/react": "~18.3.1",
-    "metro": "^0.83.3",
-    "metro-config": "^0.83.3",
-    "metro-core": "^0.83.3",
-    "metro-minify-terser": "^0.83.3",
-    "metro-resolver": "^0.83.3",
-    "metro-runtime": "^0.83.3",
-    "metro-source-map": "^0.83.3",
-    "metro-symbolicate": "^0.83.3",
+    "metro": "~0.81.0",
+    "metro-config": "~0.81.0",
+    "metro-core": "~0.81.0",
+    "metro-minify-terser": "~0.81.0",
+    "metro-resolver": "~0.81.0",
+    "metro-runtime": "~0.81.0",
+    "metro-source-map": "~0.81.0",
+    "metro-symbolicate": "~0.81.0",
     "typescript": "~5.9.2"
   },
   "private": true
