feat: localize secondary pages (HelpCenter, Activity, Alerts, Users, Pin, Legal) and add dynamic date locale utility

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -51,7 +51,9 @@
     "extra": {
       "eas": {
         "projectId": "83fa27c4-f1c0-45aa-9256-096ec479ced6"
-      }
+      },
+      "webAppUrl": "https://stockman.pro/app",
+      "apiUrl": "https://stockman-backend.onrender.com"
     }
   }
 }
