feat: localize reminder rules and prepare for google play deployment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "expo-av": "~15.0.2",
     "expo-camera": "~16.0.12",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.20",
     "expo-device": "~7.0.2",
     "expo-document-picker": "~13.0.1",
     "expo-file-system": "~18.0.7",
