--- a/desktop.ini
+++ b/desktop.ini
@@ -17,3 +17,5 @@ Capture d'écran 2026-02-17 185238.png=@Capture d'écran 2026-02-17 185238,0
 Capture d'écran 2026-02-17 185204.png=@Capture d'écran 2026-02-17 185204,0
 Capture d'écran 2026-02-17 185153.png=@Capture d'écran 2026-02-17 185153,0
 Capture d'écran 2026-02-17 185120.png=@Capture d'écran 2026-02-17 185120,0
+Capture d'écran 2026-02-20 142243.png=@Capture d'écran 2026-02-20 142243,0
+Capture d'écran 2026-02-20 142641.png=@Capture d'écran 2026-02-20 142641,0
