feat: implement AI-powered bulk import mapping with Gemini 2.0 Flash, Grand Livre feature, standardized PDF generation, and various bug fixes

--- a/web-app/package.json
+++ b/web-app/package.json
@@ -21,7 +21,8 @@
     "react-dom": "19.2.3",
     "react-i18next": "^16.5.4",
     "recharts": "^3.7.0",
-    "tailwind-merge": "^3.5.0"
+    "tailwind-merge": "^3.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
