--- a/web-app/public/manifest.json
+++ b/web-app/public/manifest.json
@@ -8,14 +8,9 @@
     "theme_color": "#0F172A",
     "icons": [
         {
-            "src": "/icon.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/icon.png",
-            "sizes": "512x512",
-            "type": "image/png"
+            "src": "/favicon.ico",
+            "sizes": "any",
+            "type": "image/x-icon"
         }
     ]
 }
