Refactor Dashboard and Suppliers for React reconciliation (Web) and guard LayoutAnimation

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -9,11 +9,20 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#0F172A"
-      }
+      },
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.USE_BIOMETRIC",
+        "android.permission.USE_FINGERPRINT"
+      ]
     },
     "ios": {
       "bundleIdentifier": "com.youssouphasba.stockman",
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "icon": "./assets/icon.png",
     "scheme": "stockman",
