--- a/landing-page/.env.example
+++ b/landing-page/.env.example
@@ -1,3 +1,5 @@
+# URL de l'API backend (Railway)
+VITE_API_URL=https://stockman-production-149d.up.railway.app
+
 # Google Analytics 4 Measurement ID
-# Remplacez G-XXXXXXXXXX par votre ID de mesure réel
 VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
