fix: revenuecat crash in release build and update api url fallback

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -60,7 +60,7 @@
         "projectId": "83fa27c4-f1c0-45aa-9256-096ec479ced6"
       },
       "webAppUrl": "https://stockman.pro/app",
-      "apiUrl": "https://stockman-backend.onrender.com"
+      "apiUrl": "https://stockman-production-149d.up.railway.app"
     }
   }
 }
