chore: update desktop configurations and add screenshot

--- a/desktop.ini
+++ b/desktop.ini
@@ -19,3 +19,4 @@ Capture d'écran 2026-02-17 185153.png=@Capture d'écran 2026-02-17 185153,0
 Capture d'écran 2026-02-17 185120.png=@Capture d'écran 2026-02-17 185120,0
 Capture d'écran 2026-02-20 142243.png=@Capture d'écran 2026-02-20 142243,0
 Capture d'écran 2026-02-20 142641.png=@Capture d'écran 2026-02-20 142641,0
+Capture d'écran 2026-02-25 143519.png=@Capture d'écran 2026-02-25 143519,0
