--- a/desktop.ini
+++ b/desktop.ini
@@ -20,3 +20,5 @@ Capture d'écran 2026-02-17 185120.png=@Capture d'écran 2026-02-17 185120,0
 Capture d'écran 2026-02-20 142243.png=@Capture d'écran 2026-02-20 142243,0
 Capture d'écran 2026-02-20 142641.png=@Capture d'écran 2026-02-20 142641,0
 Capture d'écran 2026-02-25 143519.png=@Capture d'écran 2026-02-25 143519,0
+Capture d'écran 2026-02-25 154316.png=@Capture d'écran 2026-02-25 154316,0
+Capture d'écran 2026-02-25 154327.png=@Capture d'écran 2026-02-25 154327,0
